--- a/iccr2024_template.tex
+++ b/iccr2024_template.tex
@@ -30,15 +30,16 @@
 \title{A LaTex Template for a ICCR 2024 submission} 
 
 %%%%% add authors and affiliations here %%%%%
-\author[1]{First~Author}
-\author[1,2]{Second~Author}
-\author[2]{Third~Author}
+\author[1,2]{Paul Dubois}
+\author[1]{Nikos Paragios}
+\author[2]{Paul-Henry Cournède}
+%\author[1]{Rafael Marini-Silva}
+%\author[1]{Norbert Bus}
+%\author[3]{Nikos Komodakis}
 
-\affil[1]{Department of Radiotherapy,
-          University of Radiation Oncology, City, Country}
+\affil[1]{TheraPanacea, Paris, France}
 
-\affil[2]{Department of Radiology,
-          University of Computer Sciences, City, Country}
+\affil[2]{MICS, CentraleSupélec, Université Paris-Saclay, Paris, France}
 
 %%%%% don't change these 2 lines %%%%%
 \maketitle
