--- a/iccr2024_template.tex
+++ b/iccr2024_template.tex
@@ -54,7 +54,19 @@
 
 
 \begin{customabstract}
-Add your abstract here. This abstract can be slightly longer than the very short 150 words abstract that you have to enter in the submission system and that is used for the program. 
+	Achieving optimal dose distribution in radiation therapy planning is a complex task, with contradicting goals.
+	Yet, this step is crucial with profound implications for patient treatment and toxicity management.
+	
+	The absence of universally agreed-upon constraints prioritization in radiation therapy planning complicates the definition of an optimal plan, requiring a delicate balance between multiple objectives.
+	This balanced usually ends up being done manually.
+	
+	The optimization process is further hindered by complex mathematical aspects, involving non-convex multi-objective inverse problems with a vast solution space.
+	Expert bias introduces variability in clinical practice, as treatment planning is shaped by the preferences and expertise of radiation oncologists and medical physicists.
+	
+	To surmount these challenges, we propose a first step towards a fully automated approach, using an innovative deep reinforcement learning like method.
+	We managed to successfully train an agent to mimic the actions of a human dosimetrist, in order to reach a plan similar to past history.
+	As this is very new and ongoing research, we generated synthetic phantom patients and associated trust-able clinical dose.
+	In future work, we hope to be able to apply this technique to real cases.
 \end{customabstract}
 
 
