--- a/iccr2024_template.tex
+++ b/iccr2024_template.tex
@@ -27,7 +27,7 @@
 
 %-------------------------------------------------------------------------------------------
 %%%%% add your title here %%%%%
-\title{A LaTex Template for a ICCR 2024 submission} 
+\title{Deep Parameters Evaluation for Automatic Treatment Planning System} 
 
 %%%%% add authors and affiliations here %%%%%
 \author[1,2]{Paul Dubois}
@@ -63,8 +63,8 @@
 	The optimization process is further hindered by complex mathematical aspects, involving non-convex multi-objective inverse problems with a vast solution space.
 	Expert bias introduces variability in clinical practice, as treatment planning is shaped by the preferences and expertise of radiation oncologists and medical physicists.
 	
-	To surmount these challenges, we propose a first step towards a fully automated approach, using an innovative deep reinforcement learning like method.
-	We managed to successfully train an agent to mimic the actions of a human dosimetrist, in order to reach a plan similar to past history.
+	To surmount these challenges, we propose a first step towards a fully automated approach, using an innovative deep learning method that allows automatic navigation towards acceptable solution.
+	We successfully trained an agent evaluating actions of a human dosimetrist, in order to reach a plan similar to past history.
 	As this is very new and ongoing research, we generated synthetic phantom patients and associated trust-able clinical dose.
 	In future work, we hope to be able to apply this technique to real cases.
 \end{customabstract}
