use my content (nor dummy content)

--- a/my_content.tex
+++ b/my_content.tex
@@ -1,5 +1,15 @@
 \section{Introduction}
 
+Radiation therapy is now a reliable treatment for oncology, and is 
+
+The lack of standardized prioritization of constraints, together with the complexity of the underlying mathematical inverse problem make the optimization a real challenge.
+The standard procedure nowadays is to use human guided computer optimization: dosimetrists manually update the settings of an optimizing software (so called Treatment Planning System).
+
+
+As this is very new and ongoing research, we generated synthetic phantom patients and associated trust-able clinical dose.
+In future work, we hope to be able to apply this technique to real cases.
+
+
 \textbf{\color{red}Submission rules}
 \begin{itemize}
 \color{red}
