--- a/iccr2024_template.tex
+++ b/iccr2024_template.tex
@@ -78,7 +78,7 @@
 
 % dummy_content.tex shows how to add sections, figures, tables, formulas, and references
 % remove the following line, it just adds dummy content
-\input{dummy_content.tex}
+\input{my_content.tex}
 
 
 %-------------------------------------------------------------------------------------------
