started to write intro

--- a/my_content.tex
+++ b/my_content.tex
@@ -1,29 +1,16 @@
 \section{Introduction}
 
-Radiation therapy is now a reliable treatment for oncology, and is 
+Radiation therapy is now a reliable treatment for oncology.
+Despite this consensus, the way to deliver radiotherapy for its best result remain very dependent upon doctors.
+Moreover, it appears that there is a large variability across centers.
 
-The lack of standardized prioritization of constraints, together with the complexity of the underlying mathematical inverse problem make the optimization a real challenge.
-The standard procedure nowadays is to use human guided computer optimization: dosimetrists manually update the settings of an optimizing software (so called Treatment Planning System).
+To achieve the best treatment, doctors need to solve a complex inverse mathematical optimization problem with multiples trade-offs.
+There is a lack of standardized prioritization of constraints make the optimization a real challenge.
+The standard procedure nowadays is to manually guide computer optimization: dosimetrists manually update the settings of an optimizing software (so called Treatment Planning System).
 
 
 As this is very new and ongoing research, we generated synthetic phantom patients and associated trust-able clinical dose.
 In future work, we hope to be able to apply this technique to real cases.
-
-
-\textbf{\color{red}Submission rules}
-\begin{itemize}
-\color{red}
-\item submission only in pdf format
-\item two column format
-\item font size 11 for main text, abstract and references can use font size 9 (footnotesize in Latex)
-\item maximum 4 A4 pages including everything (strict limit)
-\item In addition: prepare short abstract (max 150 words) to be entered in the online submission system. 
-      This will only be used for the program. 
-      It will not be used for the review process nor for the final proceedings.
-\end{itemize}
-
-\lipsum[2-5]
-
 
 \section{Materials and Methods}
 
