re-ordered titles

--- a/my_content.tex
+++ b/my_content.tex
@@ -14,8 +14,23 @@ In future work, we hope to be able to apply this technique to real cases.
 
 \section{Materials and Methods}
 
+\subsection{Reinforcement Learning Reward}
+
+\subsection{Reward-Free Reinforcement Learning}
+
+
 \section{Results}
 
 \section{Discussion}
 
-\section{Conclusion}
+
+
+\section*{Appendix}
+
+\subsection*{Synthetic phantom patients}
+
+\subsection*{Clinical dose}
+
+\subsection*{Optimization}
+
+\subsection*{Evaluation}
