added not satisfying metrics §

--- a/my_content.tex
+++ b/my_content.tex
@@ -8,6 +8,8 @@ To achieve the best treatment, doctors need to solve a complex inverse mathemati
 There is a lack of standardized prioritization of constraints make the optimization a real challenge.
 The standard procedure nowadays is to manually guide computer optimization: dosimetrists manually update the settings of an optimizing software (so called Treatment Planning System).
 
+There has been many tries to create a metric that quantify the quality of a treatment plan: Normal tissue complication probabilities (NTCP), Target coverage, Conformity index, Heterogeneity index...
+However, none of them have been able to satisfy all radio-oncologists, and the only reliable way of assessing a plan for doctors is to check out the dose-volume histograms (DVHs) them-self.
 
 As this is very new and ongoing research, we generated synthetic phantom patients and associated trust-able clinical dose.
 In future work, we hope to be able to apply this technique to real cases.
