--- a/my_content.tex
+++ b/my_content.tex
@@ -1,4 +1,6 @@
 \section{Introduction}
+In contemporary radiation therapy, photon intensity modulated radiation therapy (IMRT) stands as a pivotal technique utilized to attain precise and conformal dose distributions within target volumes[add citation].
+This achievement owes its realization chiefly to the advent of the multileaf collimator (MLC)[add citation].
 
 Radiation therapy is now a reliable treatment for oncology [add citation].
 Despite this consensus, the way to deliver radiotherapy for its best result remain very dependent upon doctors.
