--- a/iccr2024_template.tex
+++ b/iccr2024_template.tex
@@ -27,7 +27,8 @@
 
 %-------------------------------------------------------------------------------------------
 %%%%% add your title here %%%%%
-\title{Deep Parameters Evaluation for Automatic Treatment Planning System} 
+%\title{Deep Parameters Evaluation for Automatic Treatment Planning System} 
+\title{Reward-Free Reinforcement Learning for Fully-Automatic Radiotherapy Treatment Planning System}
 
 %%%%% add authors and affiliations here %%%%%
 \author[1,2]{Paul Dubois}
