moved data § to the end

--- a/my_content.tex
+++ b/my_content.tex
@@ -38,6 +38,8 @@ In future work, we hope to be able to apply this technique to real cases.
 \section*{Appendix}
 
 \subsection*{Synthetic phantom patients}
+As this is very new and ongoing research, we generated synthetic phantom patients and associated trust-able clinical dose.
+In future work, we hope to be able to apply this technique to real cases.
 
 \subsection*{Clinical dose}
 
