added RL & DRL>expert §

--- a/my_content.tex
+++ b/my_content.tex
@@ -19,8 +19,11 @@ An extra challenge to attend for those is the fact that not all cases have the s
 Hence, for an "easy" case, doctors will require an excellent dose (in terms of the metrics mentioned above), while they can be more permissive for "harder" cases.
 This make the acceptability of a plan hard to define in general.
 
-As this is very new and ongoing research, we generated synthetic phantom patients and associated trust-able clinical dose.
-In future work, we hope to be able to apply this technique to real cases.
+Reinforcement learning is a machine learning paradigm concerned with training agents to make sequential decisions in dynamic environments.
+Through a process of trial and error guided by rewards or penalties, agents learn to optimize their actions to achieve long-term objectives.
+It appears that the decisions taken by dosimetrists when performing the optimization of a treatment can be formalized as a reinforcement learning problem.
+Moreover, dosimetrists can guide the TPS towards an acceptable plan, but they usually struggle explaining their decision while interacting with the TPS.
+This suggest the use of deep reinforcement learning, over expert base methods.
 
 \section{Materials and Methods}
 
