--- a/my_content.tex
+++ b/my_content.tex
@@ -26,6 +26,7 @@ Moreover, dosimetrists can guide the TPS towards an acceptable plan, but they us
 This suggest the use of deep reinforcement learning, over expert base methods.
 
 \section{Materials and Methods}
+We introduce a new paradigm in reinforcement learning (RL), based on the evaluation of states, rather than the reward.
 
 \subsection{Reinforcement Learning Reward}
 
