RL reward inputs §

--- a/my_content.tex
+++ b/my_content.tex
@@ -38,7 +38,8 @@ The evaluation $\mathcal{E}$ can one, or a mixture of the metrics mentions in \r
 This setup may leverage knowledge about which actions to perform, instead of guessing randomly as a meta optimizer would do.
 We can hope to gain some computation time.
 
-
+However, this technique is not using the plan used in past cases; it only needs the optimizer inputs (CT, structures contours).
+We propose to use the availability of past treatment plans, to better catch the complexity of decision taken by dosimetrists, and match better their expectations of a fully automatic treatment planning system.
 
 \subsection{Reward-Free Reinforcement Learning}
 
