RL reward eval with dist

--- a/my_content.tex
+++ b/my_content.tex
@@ -41,6 +41,8 @@ We can hope to gain some computation time.
 However, this technique is not using the plan used in past cases; it only needs the optimizer inputs (CT, structures contours).
 We propose to use the availability of past treatment plans, to better catch the complexity of decision taken by dosimetrists, and match better their expectations of a fully automatic treatment planning system.
 
+As developed in previous work, we can derive a distance between doses plans [add citation].
+If we consider the clinical dose of past cases (used for training) as the best achievable one, then we can evaluate a dose plan by computing its distance with the clinical dose plan.
 
 
 \subsection{Reward-Free Reinforcement Learning}
