RL reward eval with dist math

--- a/my_content.tex
+++ b/my_content.tex
@@ -44,6 +44,9 @@ We propose to use the availability of past treatment plans, to better catch the 
 As developed in previous work, we can derive a distance between doses plans [add citation].
 If we consider the clinical dose of past cases (used for training) as the best achievable one, then we can evaluate a dose plan by computing its distance with the clinical dose plan.
 
+Letting $D_t$ be the dose associated with $S_t$, and $D_C$ the clinical dose.
+We then define $\mathcal{E}(S_t) = \mathcal{D}(D_t, D_C)$.
+Since in that case, lower is better, we will define the reward as $$R_t = \mathcal{E}(S_t) - \mathcal{E}(S_{t+1}) = \mathcal{D}(D_t, D_C) - \mathcal{D}(D_{t+1}, D_C).$$
 
 \subsection{Reward-Free Reinforcement Learning}
 
