--- a/iccr2024_template.tex
+++ b/iccr2024_template.tex
@@ -28,7 +28,9 @@
 %-------------------------------------------------------------------------------------------
 %%%%% add your title here %%%%%
 %\title{Deep Parameters Evaluation for Automatic Treatment Planning System} 
-\title{Reward-Free Reinforcement Learning for Fully-Automatic Radiotherapy Treatment Planning System}
+%\title{Reward-Free Reinforcement Learning for Fully-Automatic Radiotherapy Treatment Planning System}
+%\title{Clinical Knowledge Based Reinforcement Learning\\for Fully-Automatic Radiotherapy Treatment Planning System}
+\title{Clinical Knowledge Based Reinforcement Learning\\for Radiotherapy Treatment Planning System}
 
 %%%%% add authors and affiliations here %%%%%
 \author[1,2]{Paul Dubois}
