--- a/iccr2024.sty
+++ b/iccr2024.sty
@@ -18,7 +18,7 @@
 \usepackage{booktabs}
 \usepackage{fancyhdr}
 \usepackage{setspace}
-\usepackage[backend=biber,minnames=3,maxnames=3,isbn=false,url=false,eprint=false,giveninits=true,sorting=none,citestyle=numeric-comp]{biblatex}
+%\usepackage[backend=biber,minnames=3,maxnames=3,isbn=false,url=false,eprint=false,giveninits=true,sorting=none,citestyle=numeric-comp]{biblatex}
 \usepackage{csquotes}
 
 % pacakge to generate dummy text
@@ -64,7 +64,7 @@
     }
 
 % void In before journals in references
-\renewbibmacro{in:}{}    
+%\renewbibmacro{in:}{}
 
 % use smaller font size for references
-\AtBeginBibliography{\footnotesize}
+%\AtBeginBibliography{\footnotesize}
