--- a/my_content.tex
+++ b/my_content.tex
@@ -1,6 +1,6 @@
 \section{Introduction}
-In contemporary radiation therapy, photon intensity modulated radiation therapy (IMRT) stands as a pivotal technique utilized to attain precise and conformal dose distributions within target volumes[add citation].
-This achievement owes its realization chiefly to the advent of the multileaf collimator (MLC)[add citation].
+In contemporary radiation therapy, photon intensity modulated radiation therapy (IMRT) stands as a pivotal technique utilized to attain precise and conformal dose distributions within target volumes\cite{xu_comparison_2017}.
+This achievement owes its realization chiefly to the advent of the multileaf collimator (MLC)\cite{galvin_characterization_1993}.
 
 Radiation therapy is now a reliable treatment for oncology [add citation].
 Despite this consensus, the way to deliver radiotherapy for its best result remain very dependent upon doctors.
@@ -70,3 +70,4 @@ In future work, we hope to be able to apply this technique to real cases.
 \subsection*{Optimization}
 
 \subsection*{Evaluation}
+
