--- a/refs.bib
+++ b/refs.bib
@@ -16,4 +16,20 @@
 	file = {Full Text:C\:\\Users\\PaulDubois\\Zotero\\storage\\5XVMJTC8\\Xu et al. - 2017 - Comparison of IMRT versus 3D-CRT in the treatment .pdf:application/pdf},
 }
 
+@article{galvin_characterization_1993,
+	title = {Characterization of a multileaf collimator system},
+	volume = {25},
+	issn = {03603016},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/036030169390339W},
+	doi = {10.1016/0360-3016(93)90339-W},
+	language = {en},
+	number = {2},
+	urldate = {2024-02-08},
+	journal = {International Journal of Radiation Oncology*Biology*Physics},
+	author = {Galvin, James M. and Smith, Alfred R. and Lally, Brian},
+	month = jan,
+	year = {1993},
+	pages = {181--192},
+}
+
 
