--- a/my_content.tex
+++ b/my_content.tex
@@ -1,10 +1,10 @@
 \section{Introduction}
-In contemporary radiation therapy, photon intensity modulated radiation therapy (IMRT) stands as a pivotal technique utilized to attain precise and conformal dose distributions within target volumes\cite{xu_comparison_2017}.
-This achievement owes its realization chiefly to the advent of the multileaf collimator (MLC)\cite{galvin_characterization_1993}.
+In contemporary radiation therapy, photon intensity modulated radiation therapy (IMRT) stands as a pivotal technique utilized to attain precise and conformal dose distributions within target volumes \cite{xu_comparison_2017}.
+This achievement owes its realization chiefly to the advent of the multileaf collimator (MLC) \cite{galvin_characterization_1993}.
 
-Radiation therapy is now a reliable treatment for oncology [add citation].
+Radiation therapy is now a reliable treatment for oncology \cite{valentini_survival_2009}.
 Despite this consensus, the way to deliver radiotherapy for its best result remain very dependent upon doctors.
-Moreover, it appears that there is a large variability across centers[add citation?].
+Moreover, it appears that there is a large variability across physicians and centers, bot in terms of 3D structures contouring and irradiation constraints priorities \cite{variability_2021}.
 
 To achieve the best treatment, doctors need to solve a complex inverse mathematical optimization problem with multiples trade-offs[add citation].
 There is a lack of standardized prioritization of constraints make the optimization a real challenge[add citation].
