--- a/refs.bib
+++ b/refs.bib
@@ -33,3 +33,40 @@
 }
 
 
+@article{valentini_survival_2009,
+	title = {Survival after radiotherapy in gastric cancer: {Systematic} review and meta-analysis},
+	volume = {92},
+	issn = {01678140},
+	shorttitle = {Survival after radiotherapy in gastric cancer},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0167814009003247},
+	doi = {10.1016/j.radonc.2009.06.014},
+	language = {en},
+	number = {2},
+	urldate = {2024-02-08},
+	journal = {Radiotherapy and Oncology},
+	author = {Valentini, Vincenzo and Cellini, Francesco and Minsky, Bruce D. and Mattiucci, Gian Carlo and Balducci, Mario and D’Agostino, Giuseppe and D’Angelo, Elisa and Dinapoli, Nicola and Nicolotti, Nicola and Valentini, Chiara and La Torre, Giuseppe},
+	month = aug,
+	year = {2009},
+	pages = {176--183},
+}
+
+
+@article{variability_2021,
+	title = {Intra- and inter-physician variability in target volume delineation in radiation therapy},
+	issn = {0449-3060, 1349-9157},
+	url = {https://academic.oup.com/jrr/advance-article/doi/10.1093/jrr/rrab080/6367625},
+	doi = {10.1093/jrr/rrab080},
+	abstract = {Abstract
+	Reduction in setup errors is advocated through daily imaging and adaptive therapy, where the target volume is drawn daily. Previous studies suggest that inter-physician volume variation is significant (1.5 cm standard deviation [SD]); however, there are limited data for intra-physician consistency in daily target volume delineation, which is investigated in this study. Seven patients with lung cancer were chosen based on the perceived difficulty of contouring their disease, varying from simple parenchymal lung nodules to lesions with extensive adjacent atelectasis. Four physicians delineated the gross tumor volume (GTV) for each patient on 10 separate days to see the intra- and inter-physician contouring. Isocenter coordinates (x, y and z), target volume (cm3), and largest dimensions on anterior–posterior (AP) and lateral views were recorded for each GTV. Our results show that the variability among the physicians was reflected by target volumes ranging from +109\% to −86\% from the mean while isocenter coordinate changes were minimal; 3.8, 1.7 and 1.9 mm for x, y and z coordinates, respectively. The orthogonal image (AP and lateral) change varied 16.3 mm and 15.0 mm respectively among days and physicians.
+	We conclude than when performing daily imaging, random variability in contouring resulted in isocenter changes up to ±3.8 mm in our study. The shape of the target varied within ±16 mm. This study suggests that when using daily imaging to track isocenter, target volume, or treatment parameters, physicians should be aware of personal variability when considering margins added to the target volume in daily decision making especially for difficult cases.},
+	language = {en},
+	urldate = {2024-02-08},
+	journal = {Journal of Radiation Research},
+	author = {Das, Indra J and Compton, Julia J and Bajaj, Amishi and Johnstone, Peter A},
+	month = sep,
+	year = {2021},
+	pages = {rrab080},
+	file = {Full Text:C\:\\Users\\PaulDubois\\Zotero\\storage\\KXXAU5XN\\Das et al. - 2021 - Intra- and inter-physician variability in target v.pdf:application/pdf},
+}
+
+
