--- a/my_content.tex
+++ b/my_content.tex
@@ -6,9 +6,9 @@ Radiation therapy is now a reliable treatment for oncology \cite{valentini_survi
 Despite this consensus, the way to deliver radiotherapy for its best result remain very dependent upon doctors.
 Moreover, it appears that there is a large variability across physicians and centers, bot in terms of 3D structures contouring and irradiation constraints priorities \cite{variability_2021}.
 
-To achieve the best treatment, doctors need to solve a complex inverse mathematical optimization problem with multiples trade-offs[add citation].
-There is a lack of standardized prioritization of constraints make the optimization a real challenge[add citation].
-The standard procedure nowadays is to manually guide computer optimization: dosimetrists manually update the settings of an optimizing software (so called Treatment Planning System)[add citation].
+To achieve the best treatment, doctors need to solve a complex inverse mathematical optimization problem with multiples trade-offs \cite{oelfke_inverse_2001} \cite{webb_physical_2003}.
+There is a lack of standardized prioritization of constraints make the optimization a real challenge.
+The standard procedure nowadays is to manually guide computer optimization: dosimetrists manually update the settings of an optimizing software (so called Treatment Planning System) \cite{planification_website}.
 
 There has been many tries to create a metric that quantify the quality of a treatment plan: Normal tissue complication probabilities (NTCP), Target coverage, Conformity index, Heterogeneity index (non-exhaustive list)[add citations].\label{metrics}
 However, none of them has been able to satisfy all radio-oncologists, and the only reliable way of assessing a plan for doctors is to check out the dose-volume histograms (DVHs) them-self.
