--- a/refs.bib
+++ b/refs.bib
@@ -32,7 +32,6 @@
 	pages = {181--192},
 }
 
-
 @article{valentini_survival_2009,
 	title = {Survival after radiotherapy in gastric cancer: {Systematic} review and meta-analysis},
 	volume = {92},
@@ -49,7 +48,6 @@
 	year = {2009},
 	pages = {176--183},
 }
-
 
 @article{variability_2021,
 	title = {Intra- and inter-physician variability in target volume delineation in radiation therapy},
@@ -69,4 +67,47 @@
 	file = {Full Text:C\:\\Users\\PaulDubois\\Zotero\\storage\\KXXAU5XN\\Das et al. - 2021 - Intra- and inter-physician variability in target v.pdf:application/pdf},
 }
 
+@article{oelfke_inverse_2001,
+	title = {Inverse planning for photon and proton beams},
+	volume = {26},
+	issn = {09583947},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0958394701000577},
+	doi = {10.1016/S0958-3947(01)00057-7},
+	language = {en},
+	number = {2},
+	urldate = {2024-02-08},
+	journal = {Medical Dosimetry},
+	author = {Oelfke, U and Bortfeld, T},
+	month = jun,
+	year = {2001},
+	pages = {113--124},
+	annote = {Inverse planning
+	},
+}
 
+@article{webb_physical_2003,
+	title = {The physical basis of {IMRT} and inverse planning},
+	volume = {76},
+	issn = {0007-1285, 1748-880X},
+	url = {https://academic.oup.com/bjr/article/76/910/678-689/7470601},
+	doi = {10.1259/bjr/65676879},
+	language = {en},
+	number = {910},
+	urldate = {2024-02-08},
+	journal = {The British Journal of Radiology},
+	author = {Webb, S},
+	month = oct,
+	year = {2003},
+	pages = {678--689},
+	annote = {Inverse planning
+	},
+}
+
+@misc{planification_website,
+	title = {Treatment {Planning} {System} {Basics} {\textbar} {Oncology} {Medical} {Physics}},
+	url = {https://oncologymedicalphysics.com/introduction-to-treatment-planning-systems/},
+	abstract = {A Treatment Planning System (TPS) is a computer system used to produce a safe and effective radiation therapy dose distributions.},
+	language = {en-US},
+	urldate = {2024-02-08},
+	file = {Snapshot:C\:\\Users\\PaulDubois\\Zotero\\storage\\E55JIJ6M\\introduction-to-treatment-planning-systems.html:text/html},
+}
