--- a/my_content.tex
+++ b/my_content.tex
@@ -10,7 +10,7 @@ To achieve the best treatment, doctors need to solve a complex inverse mathemati
 There is a lack of standardized prioritization of constraints make the optimization a real challenge.
 The standard procedure nowadays is to manually guide computer optimization: dosimetrists manually update the settings of an optimizing software (so called Treatment Planning System) \cite{planification_website}.
 
-There has been many tries to create a metric that quantify the quality of a treatment plan: Normal tissue complication probabilities (NTCP), Target coverage, Conformity index, Heterogeneity index (non-exhaustive list)[add citations].\label{metrics}
+There has been many tries to create a metric that quantify the quality of a treatment plan: Normal tissue complication probabilities (NTCP), Target coverage, Conformity index, Heterogeneity index (non-exhaustive list) \cite{lyman_normal_1992} \cite{li_input_2022}.\label{metrics}
 However, none of them has been able to satisfy all radio-oncologists, and the only reliable way of assessing a plan for doctors is to check out the dose-volume histograms (DVHs) them-self.
 
 As a result, Pareto surface exploration are doomed to failure due to the lack of impartial quantitative measurement for a particular plan[add citation].
