--- a/my_content.tex
+++ b/my_content.tex
@@ -13,8 +13,8 @@ The standard procedure nowadays is to manually guide computer optimization: dosi
 There has been many tries to create a metric that quantify the quality of a treatment plan: Normal tissue complication probabilities (NTCP), Target coverage, Conformity index, Heterogeneity index (non-exhaustive list) \cite{lyman_normal_1992} \cite{li_input_2022}.\label{metrics}
 However, none of them has been able to satisfy all radio-oncologists, and the only reliable way of assessing a plan for doctors is to check out the dose-volume histograms (DVHs) them-self.
 
-As a result, Pareto surface exploration are doomed to failure due to the lack of impartial quantitative measurement for a particular plan[add citation].
-Other meta-optimization techniques are similarly bounded, for the same reason[add citation].
+As a result, Pareto surface exploration are doomed to failure due to the lack of impartial quantitative measurement for a particular plan \cite{huang_pareto_2021}.
+Other meta-optimization techniques are similarly bounded, for the same reason \cite{wu_optimization_2001} \cite{xing_optimization_1999}.
 An extra challenge to attend for those is the fact that not all cases have the same "difficulty".
 Hence, for an "easy" case, doctors will require an excellent dose (in terms of the metrics mentioned above), while they can be more permissive for "harder" cases.
 This make the acceptability of a plan hard to define in general.
