--- a/refs.bib
+++ b/refs.bib
@@ -162,7 +162,51 @@
 	pages = {215009},
 }
 
+@article{huang_pareto_2021,
+	title = {Pareto {Optimal} {Projection} {Search} ({POPS}): {Automated} {Radiation} {Therapy} {Treatment} {Planning} by {Direct} {Search} of the {Pareto} {Surface}},
+	volume = {68},
+	issn = {0018-9294, 1558-2531},
+	shorttitle = {Pareto {Optimal} {Projection} {Search} ({POPS})},
+	url = {https://ieeexplore.ieee.org/document/9343695/},
+	doi = {10.1109/TBME.2021.3055822},
+	number = {10},
+	urldate = {2024-02-08},
+	journal = {IEEE Transactions on Biomedical Engineering},
+	author = {Huang, Charles and Yang, Yong and Panjwani, Neil and Boyd, Stephen and Xing, Lei},
+	month = oct,
+	year = {2021},
+	pages = {2907--2917},
+	file = {Accepted Version:C\:\\Users\\PaulDubois\\Zotero\\storage\\V528JFS8\\Huang et al. - 2021 - Pareto Optimal Projection Search (POPS) Automated.pdf:application/pdf},
+}
 
+@article{wu_optimization_2001,
+	title = {An optimization method for importance factors and beam weights based on genetic algorithms for radiotherapy treatment planning},
+	volume = {46},
+	issn = {0031-9155, 1361-6560},
+	url = {https://iopscience.iop.org/article/10.1088/0031-9155/46/4/313},
+	doi = {10.1088/0031-9155/46/4/313},
+	number = {4},
+	urldate = {2024-02-08},
+	journal = {Physics in Medicine and Biology},
+	author = {Wu, Xingen and Zhu, Yunping},
+	month = apr,
+	year = {2001},
+	pages = {1085--1099},
+}
 
+@article{xing_optimization_1999,
+	title = {Optimization of importance factors in inverse planning},
+	volume = {44},
+	issn = {0031-9155, 1361-6560},
+	url = {https://iopscience.iop.org/article/10.1088/0031-9155/44/10/311},
+	doi = {10.1088/0031-9155/44/10/311},
+	number = {10},
+	urldate = {2024-02-08},
+	journal = {Physics in Medicine and Biology},
+	author = {Xing, L and Li, J G and Donaldson, S and Le, Q T and Boyer, A L},
+	month = oct,
+	year = {1999},
+	pages = {2525--2536},
+}
 
 
