avoiding over fitting subsection

--- a/my_content.tex
+++ b/my_content.tex
@@ -79,6 +79,8 @@ Hence, restarting optimization from zero is forced after every weight modificati
 Given the statement of the optimization problem, and the fact that we can not use warm start, making short term compromises does not make much sense.
 It is therefore safe to predict next state evaluation directly, without the use of the Bellman optimality equation.
 
+\subsection{Avoiding Over-fitting}
+
 
 
 
