Avoiding Off-Distribution subsection

--- a/my_content.tex
+++ b/my_content.tex
@@ -87,6 +87,8 @@ Compressing the information stops the network from learning "by heart".
 Networks with such architecture show significantly better results on validation.
 %This comfort the idea that our network was learning from data, without blindly over-fitting.
 
+\subsection{Avoiding Off-Distribution}
+
 
 \section{Results}
 
